--- a/odin-recipes/recipes/jollofrice.html
+++ b/odin-recipes/recipes/jollofrice.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Jollof Rice</h1>
-        <img src="../images/jollofrice1.jpeg" alt="Image of Jollof Rice" height="310" width="310">
+        <img src="../images/jollofrice.jpeg" alt="Image of Jollof Rice" height="310" width="310">
 
         <h2>Description</h2>
         <p>Jollof rice is a spicy and savory West African dish that’s made differently from country to country. Nigerian jollof rice is prized for its delicious, smoky flavor and simplicity—to make it, you only need one pot!.</p>
