--- a/odin-recipes/recipes/jollofrice.html
+++ b/odin-recipes/recipes/jollofrice.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Jollof Rice Document</title>
+        <link rel="stylesheet" href="../css/style.css">
     </head>
     <body>
         <h1>Jollof Rice</h1>
