--- a/odin-recipes/index.html
+++ b/odin-recipes/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <title>recipe website</title>
+        <link rel="stylesheet" href="style.css">
     </head>
 
     <body>
